--- a/package.json
+++ b/package.json
@@ -1,72 +1,73 @@
 {
-    "name": "mytest",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "mytest",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.1.2",
+    "@angular/compiler": "4.1.2",
+    "@angular/compiler-cli": "4.1.2",
+    "@angular/core": "4.1.2",
+    "@angular/forms": "4.1.2",
+    "@angular/http": "4.1.2",
+    "@angular/platform-browser": "4.1.2",
+    "@angular/platform-browser-dynamic": "4.1.2",
+    "@ionic-native/camera": "^3.12.1",
+    "@ionic-native/core": "3.10.2",
+    "@ionic-native/file": "^3.12.1",
+    "@ionic-native/image-picker": "^3.12.1",
+    "@ionic-native/splash-screen": "3.10.2",
+    "@ionic-native/status-bar": "3.10.2",
+    "@ionic-native/toast": "^3.12.1",
+    "@ionic/storage": "2.0.1",
+    "angular2-signaturepad": "^2.6.0",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.1.0",
+    "cordova-plugin-console": "^1.0.5",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-jcore": "file:node_modules/cordova-plugin-jcore",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.2.2",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "ionic-angular": "3.3.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "jpush-phonegap-plugin": "^3.1.7",
+    "rxjs": "5.1.1",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.11"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "1.3.7",
+    "@ionic/cli-plugin-cordova": "1.3.0",
+    "@ionic/cli-plugin-ionic-angular": "1.3.0",
+    "typescript": "2.3.3"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "jpush-phonegap-plugin": {
+        "APP_KEY": "afdfad1367076d0343e23907"
+      },
+      "cordova-plugin-camera": {}
     },
-    "dependencies": {
-        "@angular/common": "4.1.2",
-        "@angular/compiler": "4.1.2",
-        "@angular/compiler-cli": "4.1.2",
-        "@angular/core": "4.1.2",
-        "@angular/forms": "4.1.2",
-        "@angular/http": "4.1.2",
-        "@angular/platform-browser": "4.1.2",
-        "@angular/platform-browser-dynamic": "4.1.2",
-        "@ionic-native/camera": "^3.12.1",
-        "@ionic-native/core": "3.10.2",
-        "@ionic-native/file": "^3.12.1",
-        "@ionic-native/image-picker": "^3.12.1",
-        "@ionic-native/splash-screen": "3.10.2",
-        "@ionic-native/status-bar": "3.10.2",
-        "@ionic-native/toast": "^3.12.1",
-        "@ionic/storage": "2.0.1",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-camera": "^2.4.1",
-        "cordova-plugin-compat": "^1.1.0",
-        "cordova-plugin-console": "^1.0.5",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-jcore": "file:node_modules/cordova-plugin-jcore",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "ionic-angular": "3.3.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "jpush-phonegap-plugin": "^3.1.7",
-        "rxjs": "5.1.1",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.11"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "1.3.7",
-        "@ionic/cli-plugin-cordova": "1.3.0",
-        "@ionic/cli-plugin-ionic-angular": "1.3.0",
-        "typescript": "2.3.3"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "jpush-phonegap-plugin": {
-                "APP_KEY": "afdfad1367076d0343e23907"
-            },
-            "cordova-plugin-camera": {}
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
